<?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.martijndorsman.imtpmd.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        >

        <TextView
            android:id="@+id/tvActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/scherm1Button"
            android:textAlignment="center"
            android:textColor="@color/colorButton"
            android:textSize="48sp" />

        <TextView
        android:id="@+id/tvActivitySubtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/gemaaktdoor"
        android:textAlignment="center"
        android:textColor="@color/subtext"
        android:textSize="18sp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

        <TextView
            android:id="@+id/tvActivityInstructions"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/mActivityInstructions"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/vakkenbutton"
            android:layout_width="240dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorButton"
            android:text="@string/vakkenbekijken"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/voortgangbutton" />

        <Button
        android:id="@+id/voortgangbutton"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:background="@color/colorButton"
        android:text="@string/voortgangbekijken"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp" />



    <Button
        android:id="@+id/vakkenlijstbutton"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:background="@color/colorButton"
        android:text="@string/vakkenlijstbutton"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />
    </LinearLayout>

   </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>
