<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    android:elevation="24dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvGradeedit"
            android:layout_width="match_parent"
            android:layout_height="36dp"

            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/cijferaanpassen"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:id="@+id/etGradeEdit"
            android:layout_below="@+id/tvGradeedit"
            android:layout_centerHorizontal="true"
            android:inputType="numberDecimal"
            android:backgroundTint="@color/colorButton"
            />

        <Button
            android:id="@+id/gradeButton"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_height="36dp"
            android:padding="8dp"
            android:layout_below="@+id/etGradeEdit"
            android:layout_alignParentRight="true"
            android:text="@string/bevestig"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:minWidth="88dp"
            android:layout_height="36dp"
            android:padding="8dp"
            android:text="@string/annuleer"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:layout_alignTop="@+id/gradeButton"
            android:layout_toLeftOf="@+id/gradeButton"
            android:layout_toStartOf="@+id/gradeButton" />
    </RelativeLayout>
</android.support.v7.widget.CardView>